# PLENA_Tools

./: .gitignore  README.md  pyproject.toml
aria-llama-ops/experiments/: check_flashattn.py  check_rms_norm.py  check_sliding_attn.py
aria-llama-ops/src/aria_lm_ops/models/: llama.py
aria-llama-ops/src/aria_lm_ops/utils/: __init__.py  check.py  model_shortcut.py
memory_mapping/: __init__.py  memory_map.py
plena_quant/: README.md  __init__.py
plena_quant/common/: __init__.py  hardware_utils.py  minifloat.py  utils.py
plena_quant/mxfp/: __init__.py  quantizer.py  rand_gen.py  utils.py
plena_quant/mxint/: __init__.py  quantizer.py  rand_gen.py  utils.py
plena_quant/quant_operations/: __init__.py  add.py  cast.py  exp.py  mult.py  reciprocal.py
plena_quant/quantizer/: __init__.py  integer.py  minifloat.py  mxfp.py  mxint.py  utils.py
plena_quant/quantizer/hardware_quantizer/: __init__.py  minifloat.py  mxfp.py  mxint.py  utils.py
plena_utils/: __init__.py  config.py  debugger.py  load_config.py  logger.py  rand_gen.py  torch_fp_conversion.py
sim_env_utils/: __init__.py  build_env.py  build_sys_tools.py
utils/: config.py  load_config.py  torch_fp_conversion.py
verification/: __init__.py  check_mem.py  create_sim_env.py  hbm_interpreter.py  test_data_gen.py  verify_mxint_encoding.py  verify_rtl_sim.py  view_hbm_data.py  view_mem.py  view_vector_result.py
